Port Bug #246911 - misbehave of switch() statement when variable is used as a label - patch by shaver, r=brendan